docs/v8.1/packages_api/ui/uplotconfigbuilder.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "UPlotConfigBuilder"
keywords = ["grafana","documentation","sdk","@grafana/ui"]
type = "docs"
disable_edit_link = true
+++

## UPlotConfigBuilder class

<b>Signature</b>

```typescript
export declare class UPlotConfigBuilder 
```
<b>Import</b>

```typescript
import { UPlotConfigBuilder } from '@grafana/ui';
```
<b>Constructors</b>

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [constructor(timeZone)](#constructor-timezone) |  | Constructs a new instance of the <code>UPlotConfigBuilder</code> class |

<b>Properties</b>

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [prepData](#prepdata-property) |  | <code>PrepData &#124; undefined</code> |  |
|  [scaleKeys](#scalekeys-property) |  | <code>[string, string]</code> |  |

<b>Methods</b>

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [addAxis(props)](#addaxis-method) |  |  |
|  [addBand(band)](#addband-method) |  |  |
|  [addHook(type, hook)](#addhook-method) |  |  |
|  [addScale(props)](#addscale-method) |  | Add or update the scale with the scale key |
|  [addSeries(props)](#addseries-method) |  |  |
|  [addThresholds(options)](#addthresholds-method) |  |  |
|  [getAxisPlacement(scaleKey)](#getaxisplacement-method) |  |  |
|  [getConfig()](#getconfig-method) |  |  |
|  [getSeries()](#getseries-method) |  |  |
|  [getTooltipInterpolator()](#gettooltipinterpolator-method) |  |  |
|  [hasSync()](#hassync-method) |  |  |
|  [setCursor(cursor)](#setcursor-method) |  |  |
|  [setPrepData(prepData)](#setprepdata-method) |  |  |
|  [setSelect(select)](#setselect-method) |  |  |
|  [setStacking(enabled)](#setstacking-method) |  |  |
|  [setSync()](#setsync-method) |  |  |
|  [setTooltipInterpolator(interpolator)](#settooltipinterpolator-method) |  |  |

### constructor(timeZone)

Constructs a new instance of the `UPlotConfigBuilder` class

<b>Signature</b>

```typescript
constructor(timeZone?: TimeZone);
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  timeZone | <code>TimeZone</code> |  |

### prepData property

<b>Signature</b>

```typescript
prepData: PrepData | undefined;
```

### scaleKeys property

<b>Signature</b>

```typescript
scaleKeys: [string, string];
```

### addAxis method

<b>Signature</b>

```typescript
addAxis(props: AxisProps): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  props | <code>AxisProps</code> |  |

<b>Returns:</b>

`void`

### addBand method

<b>Signature</b>

```typescript
addBand(band: Band): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  band | <code>Band</code> |  |

<b>Returns:</b>

`void`

### addHook method

<b>Signature</b>

```typescript
addHook<T extends keyof Hooks.Defs>(type: T, hook: Hooks.Defs[T]): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  type | <code>T</code> |  |
|  hook | <code>Hooks.Defs[T]</code> |  |

<b>Returns:</b>

`void`

### addScale method

Add or update the scale with the scale key

<b>Signature</b>

```typescript
addScale(props: ScaleProps): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  props | <code>ScaleProps</code> |  |

<b>Returns:</b>

`void`

### addSeries method

<b>Signature</b>

```typescript
addSeries(props: SeriesProps): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  props | <code>SeriesProps</code> |  |

<b>Returns:</b>

`void`

### addThresholds method

<b>Signature</b>

```typescript
addThresholds(options: UPlotThresholdOptions): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  options | <code>UPlotThresholdOptions</code> |  |

<b>Returns:</b>

`void`

### getAxisPlacement method

<b>Signature</b>

```typescript
getAxisPlacement(scaleKey: string): AxisPlacement;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  scaleKey | <code>string</code> |  |

<b>Returns:</b>

`AxisPlacement`

### getConfig method

<b>Signature</b>

```typescript
getConfig(): PlotConfig;
```
<b>Returns:</b>

`PlotConfig`

### getSeries method

<b>Signature</b>

```typescript
getSeries(): UPlotSeriesBuilder[];
```
<b>Returns:</b>

`UPlotSeriesBuilder[]`

### getTooltipInterpolator method

<b>Signature</b>

```typescript
getTooltipInterpolator(): PlotTooltipInterpolator | undefined;
```
<b>Returns:</b>

`PlotTooltipInterpolator | undefined`

### hasSync method

<b>Signature</b>

```typescript
hasSync(): boolean;
```
<b>Returns:</b>

`boolean`

### setCursor method

<b>Signature</b>

```typescript
setCursor(cursor?: Cursor): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  cursor | <code>Cursor</code> |  |

<b>Returns:</b>

`void`

### setPrepData method

<b>Signature</b>

```typescript
setPrepData(prepData: PrepData): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  prepData | <code>PrepData</code> |  |

<b>Returns:</b>

`void`

### setSelect method

<b>Signature</b>

```typescript
setSelect(select: Select): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  select | <code>Select</code> |  |

<b>Returns:</b>

`void`

### setStacking method

<b>Signature</b>

```typescript
setStacking(enabled?: boolean): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  enabled | <code>boolean</code> |  |

<b>Returns:</b>

`void`

### setSync method

<b>Signature</b>

```typescript
setSync(): void;
```
<b>Returns:</b>

`void`

### setTooltipInterpolator method

<b>Signature</b>

```typescript
setTooltipInterpolator(interpolator: PlotTooltipInterpolator): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  interpolator | <code>PlotTooltipInterpolator</code> |  |

<b>Returns:</b>

`void`

